# aster

./: .ci-prompt-audit-trigger  .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  aster-before-stage11.sql  aster-before-stage14.sql  aster-before-stage15.sql  aster-before-stage16.sql  aster-before-stage17.sql  compose.yaml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  agent_actions.py  agent_communication_dispatch.py  agent_dispatch_models.py  agent_execution.py  agent_models.py  agent_notification_models.py  agent_notification_schemas.py  agent_queue.py  agent_retrieval.py  agent_run_scope_models.py  agent_runtime.py  agent_schedule.py  agent_schemas.py  agent_service.py  agent_step_service.py  agent_time.py  auth_dependencies.py  auth_schemas.py  auth_service.py  automation_execution.py  automation_models.py  automation_queue.py  automation_schedule.py  automation_schemas.py  automation_service.py  automation_worker.py  builtin_tasks.py  chat_generation.py  chat_runtime.py  chat_tool_responses.py  chat_tool_schemas.py  cli.py  communication_adapters.py  communication_models.py  communication_route_patch.py  communication_runtime.py  communication_schemas.py  communication_service.py  communication_storage.py  (+43 more)
apps/api/migrations/: env.py
apps/api/tests/: conftest.py  test_agent_dispatch.py  test_agents.py  test_auth.py  test_automation_queue.py  test_automation_schedule.py  test_automations.py  test_builtin_tasks.py  test_chat.py  test_chat_controls.py  test_chat_reasoning.py  test_chat_streaming_client.py  test_communication_adapters.py  test_communication_drafts.py  test_communication_history_runtime.py  (+28 more)
(+240 files in other folders)
